DOM and JS changes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vsspnkkvr</title>
+   
 </head>
 <body>
 
-    <h1>About me:</h1>
+    <h1>about me:</h1>
 
     <p>The first thing you should know about me is that I hate writing about myself; 
     I get mad at the screen in front of me and my writing usually turns into ranting. 
@@ -33,8 +34,8 @@
     I'm an autistic writer who thinks the language of computers is just as beautiful if not
     more so than the language of books. Thank you for your patience and for indulging me. 
     I will not proofread this.</p>
-
-    <p>Some other things about me:</p>
+    
+    <h3>some other things about me:</h3>
 
     <ul>
         <li>I'm currently proudly and intensely hyperfixated on Pokemon Go and Wizard 101</li>
@@ -43,14 +44,28 @@
 
         <li>My favorite movie is Ginger Snaps</li>
     </ul>
+
+    <section id="skills">
+
+        <h3>skills:</h3>
+
+        <ul id="ul"></ul>
+
+
+
+    </section>
     
-    <p>connect:</P>
+    <h3>connect:</h3>
 
     <ul>
         <li>github - vsspnkkvr</li>
         <li>email - vsspnkkvr@proton.me</li>
         <li>or - npetroli@unca.edu</li>
     </ul>
+
+    <footer id="footer"></footer>
+
+    <script src="js/index.js"></script>
 
 </body>
 </html>
