--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                     /_/                       
     </pre>
 
+    <div class="navbar">
+        <a href="#cm">contact me</a>
+        <a href="#lam">leave a message</a>
+
+    </div>
+
     <h1 class="h">about me:</h1>
 
     <p id="firstp">The first thing you should know about me is that I hate writing about myself; 
@@ -37,7 +43,7 @@
     world for much of my life and so I have a deep need to feel like my presence and 
     existence impact it in some tangible way. The most fulfilling way I've found to achieve
     that is by making something. Taking something from within myself and seeing it manifest
-    outside of myself. Making it real"Times New Roman", , and therefore, making myself real. If the fabric 
+    outside of myself. Making it real, and therefore, making myself real. If the fabric 
     of the universe is woven out of stories, adding more stories is the way to become 
     part of it. And that's why I'm trying to become what you would call a programmer. 
     I'm an autistic writer who thinks the language of computers is just as beautiful if not
@@ -64,7 +70,7 @@
 
     </section>
     
-    <h3 class="h">connect:</h3>
+    <h3 class="h" id="cm">connect:</h3>
 
     <ul>
         <li>github - vsspnkkvr</li>
@@ -74,7 +80,7 @@
 
     <section>
 
-        <h2 class="h">leave a message</h2>
+        <h2 class="h" id="lam">leave a message</h2>
 
         <form name="leave_message"  id="form">
 
