--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
 
     </section>
     
+    <section id="projects">
+
+        <h3 class="h">projects</h3>
+        
+        <ul id="ul2"></ul>
+
+
+    </section>
+
     <h3 class="h" id="cm">connect:</h3>
 
     <ul>
