--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="artDiv"></div>
 
-    <pre id="t1">
+    <pre id="t1" aria-hidden="true">
                                      __       
         _   ________________  ____  / /_______
        | | / / ___/ ___/ __ \/ __ \/ //_/ ___/
